added firebase/firestore dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   tflite_flutter: ^0.10.0
   google_fonts: ^6.2.0
   image: ^3.0.2
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
   
 dev_dependencies:
   flutter_test:
