--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   camera: ^0.10.0+4
-  tflite_flutter: ^0.10.0
+  tflite_flutter: ^0.12.1
   google_fonts: ^6.2.0
   image: ^3.0.2
   firebase_core: ^4.2.1
   firebase_auth: ^6.1.2
   cloud_firestore: ^6.1.0
+  google_sign_in: ^6.1.0  
   
 dev_dependencies:
   flutter_test:
