--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,22 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # camera dependencies
   camera: ^0.10.0+4
+  path_provider: ^2.1.1
+
   tflite_flutter: ^0.12.1
   google_fonts: ^6.2.0
   image: ^3.0.2
-  firebase_core: ^4.2.1
-  firebase_auth: ^6.1.2
-  cloud_firestore: ^6.1.0
+
+ # Make sure these are all aligned:
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.0 
+  firebase_database: ^11.1.0
+  firebase_app_check: ^0.3.1+4
+
   google_sign_in: ^6.1.0  
   
 dev_dependencies:
