--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  #bluetooth dependencies
+  flutter_blue_plus: ^1.34.5
+  permission_handler: ^11.3.1
+
   # camera dependencies
   camera: ^0.10.0+4
   path_provider: ^2.1.1
@@ -51,6 +55,7 @@ dependencies:
   firebase_app_check: ^0.3.1+4
 
   google_sign_in: ^6.1.0  
+  camera_windows: ^0.2.6+2
   
 dev_dependencies:
   flutter_test:
