--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   #bluetooth dependencies
-  flutter_blue_plus: ^1.34.5
+  flutter_reactive_ble: ^5.0.2
   permission_handler: ^11.3.1
 
   # camera dependencies
