--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
 
   google_sign_in: ^6.1.0  
   camera_windows: ^0.2.6+2
+  url_launcher: ^6.3.2
   
 dev_dependencies:
   flutter_test:
