--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,7 @@ dependencies:
 
   tflite_flutter: ^0.12.1
   google_fonts: ^6.2.0
-  image: ^3.0.2
-
+  image: ^4.0.17 
  # Make sure these are all aligned:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
@@ -74,6 +73,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/tracking/detect.tflite
+    - assets/tracking/labelmap.txt
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
