--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,21 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>GIDClientID</key>
+    <string>887379670059-lanmqndui9hglp3ut5ivamccskliqv76.apps.googleusercontent.com</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.com.googleusercontent.apps.887379670059-lanmqndui9hglp3ut5ivamccskliqv76</string>
+            </array>
+        </dict>
+    </array>
+
+
 </dict>
 </plist>
